syntax = "proto3";

package kyve.delegation.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/KYVENetwork/chain/x/delegation/types";

// Delegator stores the information that one address has delegated to another address
// It stores important information for the F1-Fee distribution algorithm
message Delegator {
  // staker ...
  string staker = 1;
  // delegator ...
  string delegator = 2;
  // k_index ...
  uint64 k_index = 3;
  // delegation_amount ...
  uint64 initial_amount = 4;
}

// DelegationEntry represents an entry according to the F1-Fee-Distribution algorithm.
// Take a look at x/delegation/keeper/logic_f1distribution.go for more details
message DelegationEntry {
  // staker on protocol level
  string staker = 1;

  // k_index is the of the period this entry ends
  uint64 k_index = 2;

  // value is the quotient of collected rewards and total stake according to F1-distribution
  string value = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}

// DelegationPoolData ...
message DelegationData {
  // Primary keys

  // staker ...
  string staker = 1;

  // F1Distribution

  // current_rewards ...
  uint64 current_rewards = 2;
  // total_delegation ...
  uint64 total_delegation = 3;
  // latest_index_k ...
  uint64 latest_index_k = 4;

  // Stats

  // delegator_count ...
  uint64 delegator_count = 5;
  // latest_index_was_undelegation ...
  bool latest_index_was_undelegation = 6;
}

// DelegationSlash ...
message DelegationSlash {
  // staker ...
  string staker = 1;
  // k_index ...
  uint64 k_index = 2;
  // fraction ...
  string fraction = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}

// UndelegationQueueEntry ...
message UndelegationQueueEntry {
  // index ...
  uint64 index = 1;
  // staker ...
  string staker = 2;
  // delegator ...
  string delegator = 3;
  // amount ...
  uint64 amount = 4;
  // creation_time ...
  uint64 creation_time = 5;
}

// QueueState ...
message QueueState {
  // low_index ...
  uint64 low_index = 1;
  // high_index ...
  uint64 high_index = 2;
}

// RedelegationCooldown ...
message RedelegationCooldown {
  // low_index ...
  string address = 1;
  // high_index ...
  uint64 creation_date = 2;
}
